# Apex-Orchestrator-The-Adaptive-Enterprise-Intelligence-Suite

./: .env  .env.dist  .env.example  .env.production  .gitattributes  .gitignore  PowerManagement.py  README.md  ai_engine.py  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  prompt-instructions.txt  turbo.json
python/: .env.dist  AI system.py  Dockerfile  Makefile  PowerManagement.py  Test Script.py  ai_engine.py  alembic.ini  entrypoint.sh  instruction creation.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  stream_test.txt
python/alembic/: env.py
python/alembic/versions/: 001_init.py  001_unified_schema.py  002_add_agents_metadata.py  003_agent_documents_rag_ids.py  004_documents_storage_path.py  005_agent_metadata_enrich.py  006_pgvector_rag_embeddings.py  007_model_queries_flow_log.py  008_model_queries_tokens_duration_quality.py  009_connection_types_user_connections.py  010_agent_documents_source_type_url.py  011_connection_type_google_gmail_description.py  012_human_tasks_human_resolved_response.py  013_rename_tools_and_connections.py  086d2b8a05b6_create_agents_table.py  README
python/app/: __init__.py  config.py  db.py  prompt_registry.py  prompt_worker.py  queue_logging.py  sa.json  seed.py  worker.py
python/app/auth/: __init__.py  db.py  deps.py  routes.py  schemas.py  utils.py
python/app/models/: __init__.py  agent.py  agent_document.py  agent_instruction.py  agent_tool.py  connection_type.py  human_task.py  model_query.py  tool.py  (+1 more)
python/scripts/: get_field_service_agent_id.py  test_generate_stream.py
(+293 files in other folders)
